M5-T19.1-J fix recent review regressions