@@ -14,16 +14,30 @@ import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Arrays;
+import java.util.List;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
 
-/** Direct collision, migration and restart regressions for Guest storage-name mapping. */
+/** Direct collision, migration, concurrency and restart regressions for Guest storage names. */
 public final class GuestStorageNameCodecSelfTest {
     private GuestStorageNameCodecSelfTest() { }
 
     public static void main(String[] args) throws Exception {
+        if (args.length == 4 && "worker".equals(args[0])) {
+            runRegistryWorker(new File(args[1]), args[2], args[3]);
+            return;
+        }
         testCollisionFreeContextSurfaces();
-        testLegacyMigrationAndAmbiguity();
-        testLongNameRestartStability();
-        System.out.println("PASS Guest storage name codec collision and migration self-test");
+        testLegacyMigrationRequiresProvableOwnership();
+        testLegacyEnumerationMigratesUniqueAndRejectsAmbiguous();
+        testIndependentCodecInstancesMergeRegistryUpdates();
+        testIndependentOsProcessesMergeRegistryUpdates();
+        testShortNamesDoNotGrowRegistry();
+        testLongNameRestartStabilityAndClaimCleanup();
+        System.out.println("PASS Guest storage name codec transactional mapping self-test");
     }
 
     private static void testCollisionFreeContextSurfaces() throws Exception {
@@ -49,9 +63,8 @@ public final class GuestStorageNameCodecSelfTest {
                     "first file content was replaced by collision");
             require("second-file".equals(read(context.getFileStreamPath("file?a"))),
                     "second file content was replaced by collision");
-            require(Arrays.asList(context.fileList()).containsAll(
-                    Arrays.asList("file a", "file?a")),
-                    "fileList did not return logical names");
+            require(Arrays.asList(context.fileList()).containsAll(List.of("file a", "file?a")),
+                    "fileList did not decode reversible logical names");
 
             File firstDatabase = context.getDatabasePath("db a");
             File secondDatabase = context.getDatabasePath("db?a");
@@ -59,8 +72,8 @@ public final class GuestStorageNameCodecSelfTest {
                     "colliding database names mapped to one physical path");
             context.openOrCreateDatabase("db a", Context.MODE_PRIVATE, null).close();
             context.openOrCreateDatabase("db?a", Context.MODE_PRIVATE, null).close();
-            require(Arrays.asList(context.databaseList()).containsAll(Arrays.asList("db a", "db?a")),
-                    "databaseList did not return logical names");
+            require(Arrays.asList(context.databaseList()).containsAll(List.of("db a", "db?a")),
+                    "databaseList did not decode reversible logical names");
 
             require(!context.getDir("dir a", Context.MODE_PRIVATE).equals(
                             context.getDir("dir?a", Context.MODE_PRIVATE)),
@@ -87,62 +100,192 @@ public final class GuestStorageNameCodecSelfTest {
         }
     }
 
-    private static void testLegacyMigrationAndAmbiguity() throws Exception {
+    private static void testLegacyMigrationRequiresProvableOwnership() throws Exception {
         File root = Files.createTempDirectory("guest-name-codec-legacy").toFile();
         try {
             GuestContext context = newContext(root);
             File data = context.getDataDir();
 
-            File legacyFile = new File(new File(data, "files"), "file_a");
-            write(legacyFile, "legacy-file");
-            File migratedFile = context.getFileStreamPath("file?a");
-            require(!legacyFile.exists() && migratedFile.isFile(), "legacy file was not migrated");
-            require("legacy-file".equals(read(migratedFile)), "migrated file content changed");
-            requireLegacyCollision(() -> context.getFileStreamPath("file a"));
+            File uniqueLegacy = new File(new File(data, "files"), "legacy-file");
+            write(uniqueLegacy, "legacy-file-data");
+            File migrated = context.getFileStreamPath("legacy-file");
+            require(!uniqueLegacy.exists() && migrated.isFile(), "unique legacy file was not migrated");
+            require("legacy-file-data".equals(read(migrated)), "unique migration changed content");
 
-            File legacyPreferencesFile = new File(new File(data, "shared_prefs"), "prefs_a.cspf");
-            SandboxSharedPreferences legacyPreferences = new SandboxSharedPreferences(legacyPreferencesFile);
+            File ambiguousLegacy = new File(new File(data, "files"), "file_a");
+            write(ambiguousLegacy, "ambiguous-owner");
+            requireLegacyCollision(() -> context.getFileStreamPath("file?a"));
+            requireLegacyCollision(() -> context.getFileStreamPath("file a"));
+            require(ambiguousLegacy.isFile(), "ambiguous legacy data was assigned to first accessor");
+
+            File uniquePreferencesFile = new File(new File(data, "shared_prefs"), "prefs-a.cspf");
+            SandboxSharedPreferences legacyPreferences = new SandboxSharedPreferences(uniquePreferencesFile);
             require(legacyPreferences.edit().putString("owner", "legacy-preferences").commit(),
                     "legacy preferences fixture write failed");
             SharedPreferences migratedPreferences = context.getSharedPreferences(
-                    "prefs?a", Context.MODE_PRIVATE);
+                    "prefs-a", Context.MODE_PRIVATE);
             require("legacy-preferences".equals(migratedPreferences.getString("owner", null)),
-                    "legacy preferences were not migrated");
-            requireLegacyCollision(() -> context.getSharedPreferences("prefs a", Context.MODE_PRIVATE));
+                    "unique legacy preferences were not migrated");
 
-            File legacyDatabase = new File(new File(data, "databases"), "db_a");
-            write(legacyDatabase, "legacy-db");
-            File migratedDatabase = context.getDatabasePath("db?a");
-            require(!legacyDatabase.exists() && migratedDatabase.isFile(),
-                    "legacy database was not migrated");
-            requireLegacyCollision(() -> context.getDatabasePath("db a"));
+            File uniqueDatabase = new File(new File(data, "databases"), "db-a");
+            write(uniqueDatabase, "legacy-db");
+            File migratedDatabase = context.getDatabasePath("db-a");
+            require(!uniqueDatabase.exists() && migratedDatabase.isFile(),
+                    "unique legacy database was not migrated");
 
-            File legacyDir = new File(data, "app_dir_a");
-            require(legacyDir.mkdirs(), "legacy getDir fixture creation failed");
-            write(new File(legacyDir, "marker"), "legacy-dir");
-            File migratedDir = context.getDir("dir?a", Context.MODE_PRIVATE);
-            require(new File(migratedDir, "marker").isFile(), "legacy getDir data was not migrated");
-            requireLegacyCollision(() -> context.getDir("dir a", Context.MODE_PRIVATE));
+            File uniqueDir = new File(data, "app_dir-a");
+            require(uniqueDir.mkdirs(), "legacy getDir fixture creation failed");
+            write(new File(uniqueDir, "marker"), "legacy-dir");
+            File migratedDir = context.getDir("dir-a", Context.MODE_PRIVATE);
+            require(new File(migratedDir, "marker").isFile(), "unique legacy getDir was not migrated");
 
             File externalRoot = context.getExternalFilesDir(null);
-            File legacyExternal = new File(externalRoot, "Pictures_A");
-            require(legacyExternal.mkdirs(), "legacy external fixture creation failed");
-            write(new File(legacyExternal, "marker"), "legacy-external");
-            File migratedExternal = context.getExternalFilesDir("Pictures?A");
+            File uniqueExternal = new File(externalRoot, "Pictures-A");
+            require(uniqueExternal.mkdirs(), "legacy external fixture creation failed");
+            write(new File(uniqueExternal, "marker"), "legacy-external");
+            File migratedExternal = context.getExternalFilesDir("Pictures-A");
             require(new File(migratedExternal, "marker").isFile(),
-                    "legacy external directory was not migrated");
-            requireLegacyCollision(() -> context.getExternalFilesDir("Pictures A"));
+                    "unique legacy external directory was not migrated");
 
             GuestContext restarted = newContext(root);
-            requireLegacyCollision(() -> restarted.getFileStreamPath("file a"));
-            require("legacy-file".equals(read(restarted.getFileStreamPath("file?a"))),
-                    "registry restart did not preserve the successful legacy claim");
+            require("legacy-file-data".equals(read(restarted.getFileStreamPath("legacy-file"))),
+                    "unique migration was not stable across restart");
+            requireLegacyCollision(() -> restarted.getFileStreamPath("file?a"));
         } finally {
             deleteRecursively(root);
         }
     }
 
-    private static void testLongNameRestartStability() throws Exception {
+    private static void testLegacyEnumerationMigratesUniqueAndRejectsAmbiguous() throws Exception {
+        File uniqueRoot = Files.createTempDirectory("guest-name-codec-list-unique").toFile();
+        try {
+            GuestContext context = newContext(uniqueRoot);
+            File files = context.getFilesDir();
+            File databases = new File(context.getDataDir(), "databases");
+            write(new File(files, "discoverable-file"), "file");
+            write(new File(databases, "discoverable-db"), "db");
+            require(Arrays.asList(context.fileList()).contains("discoverable-file"),
+                    "fileList omitted a uniquely decodable legacy file");
+            require(Arrays.asList(context.databaseList()).contains("discoverable-db"),
+                    "databaseList omitted a uniquely decodable legacy database");
+            require(!new File(files, "discoverable-file").exists(),
+                    "fileList did not migrate the unique legacy file");
+        } finally {
+            deleteRecursively(uniqueRoot);
+        }
+
+        File ambiguousRoot = Files.createTempDirectory("guest-name-codec-list-ambiguous").toFile();
+        try {
+            GuestContext context = newContext(ambiguousRoot);
+            write(new File(context.getFilesDir(), "unknown_owner"), "ambiguous");
+            requireFailure(GuestStorageNameCodec.LEGACY_INDEX_AMBIGUOUS, context::fileList);
+        } finally {
+            deleteRecursively(ambiguousRoot);
+        }
+    }
+
+    private static void testIndependentCodecInstancesMergeRegistryUpdates() throws Exception {
+        File root = Files.createTempDirectory("guest-name-codec-concurrent").toFile();
+        ExecutorService executor = Executors.newFixedThreadPool(2);
+        try {
+            GuestContext first = newContext(root);
+            GuestContext second = newContext(root);
+            String alpha = "甲".repeat(500) + "-alpha";
+            String beta = "乙".repeat(500) + "-beta";
+            CountDownLatch start = new CountDownLatch(1);
+            Future<?> firstWrite = executor.submit(() -> {
+                await(start);
+                writeUnchecked(first.getFileStreamPath(alpha), "alpha");
+            });
+            Future<?> secondWrite = executor.submit(() -> {
+                await(start);
+                writeUnchecked(second.getFileStreamPath(beta), "beta");
+            });
+            start.countDown();
+            firstWrite.get(5, TimeUnit.SECONDS);
+            secondWrite.get(5, TimeUnit.SECONDS);
+
+            GuestContext restarted = newContext(root);
+            require(Arrays.asList(restarted.fileList()).containsAll(List.of(alpha, beta)),
+                    "independent codec instances lost a registry update");
+            require("alpha".equals(read(restarted.getFileStreamPath(alpha))),
+                    "alpha hash mapping was corrupted");
+            require("beta".equals(read(restarted.getFileStreamPath(beta))),
+                    "beta hash mapping was corrupted");
+        } finally {
+            executor.shutdownNow();
+            deleteRecursively(root);
+        }
+    }
+
+
+    private static void testIndependentOsProcessesMergeRegistryUpdates() throws Exception {
+        File root = Files.createTempDirectory("guest-name-codec-processes").toFile();
+        try {
+            String alpha = "process-alpha-".repeat(80);
+            String beta = "process-beta-".repeat(80);
+            String java = new File(new File(System.getProperty("java.home"), "bin"), "java")
+                    .getAbsolutePath();
+            String classPath = System.getProperty("java.class.path");
+            Process first = new ProcessBuilder(java, "-cp", classPath,
+                    GuestStorageNameCodecSelfTest.class.getName(),
+                    "worker", root.getAbsolutePath(), alpha, "alpha-process")
+                    .redirectErrorStream(true).start();
+            Process second = new ProcessBuilder(java, "-cp", classPath,
+                    GuestStorageNameCodecSelfTest.class.getName(),
+                    "worker", root.getAbsolutePath(), beta, "beta-process")
+                    .redirectErrorStream(true).start();
+            require(first.waitFor(10, TimeUnit.SECONDS), "first registry worker timed out");
+            require(second.waitFor(10, TimeUnit.SECONDS), "second registry worker timed out");
+            String firstOutput = new String(first.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
+            String secondOutput = new String(second.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
+            require(first.exitValue() == 0, "first registry worker failed: " + firstOutput);
+            require(second.exitValue() == 0, "second registry worker failed: " + secondOutput);
+
+            GuestContext restarted = newContext(root);
+            String[] listed = restarted.fileList();
+            require(Arrays.asList(listed).containsAll(List.of(alpha, beta)),
+                    "independent OS processes lost a registry update: listed="
+                            + Arrays.toString(listed)
+                            + " alphaLength=" + alpha.length()
+                            + " betaLength=" + beta.length());
+            require("alpha-process".equals(read(restarted.getFileStreamPath(alpha))),
+                    "first OS-process mapping was corrupted");
+            require("beta-process".equals(read(restarted.getFileStreamPath(beta))),
+                    "second OS-process mapping was corrupted");
+        } finally {
+            deleteRecursively(root);
+        }
+    }
+
+    private static void runRegistryWorker(File root, String logicalName, String value)
+            throws Exception {
+        File instance = new File(root, "instance");
+        File files = new File(new File(instance, "data"), "files");
+        if (!files.isDirectory() && !files.mkdirs() && !files.isDirectory()) {
+            throw new IllegalStateException("cannot create worker files directory");
+        }
+        GuestStorageNameCodec codec = new GuestStorageNameCodec(instance);
+        File target = codec.resolve(files, "file", logicalName, "", "");
+        write(target, value);
+    }
+
+    private static void testShortNamesDoNotGrowRegistry() throws Exception {
+        File root = Files.createTempDirectory("guest-name-codec-short").toFile();
+        try {
+            GuestContext context = newContext(root);
+            for (int index = 0; index < 2_000; index++) {
+                context.getFileStreamPath("short-" + index);
+            }
+            File registry = new File(new File(root, "instance"), ".guest-storage-name-registry");
+            require(!registry.exists() || registry.length() < 128,
+                    "reversible short names caused persistent full-registry growth");
+        } finally {
+            deleteRecursively(root);
+        }
+    }
+
+    private static void testLongNameRestartStabilityAndClaimCleanup() throws Exception {
         File root = Files.createTempDirectory("guest-name-codec-long").toFile();
         try {
             String firstName = "長".repeat(400) + "-A";
@@ -154,6 +297,7 @@ public final class GuestStorageNameCodecSelfTest {
             require(firstPath.getName().startsWith("v2h_") && firstPath.getName().length() < 100,
                     "long name did not use bounded hash form");
             write(firstPath, "long-name-data");
+            write(secondPath, "delete-me");
 
             GuestContext restarted = newContext(root);
             require(firstPath.getCanonicalFile().equals(
@@ -163,6 +307,9 @@ public final class GuestStorageNameCodecSelfTest {
                     "long-name data was not readable after restart");
             require(Arrays.asList(restarted.fileList()).contains(firstName),
                     "long logical name was not restored by fileList");
+            require(restarted.deleteFile(secondName), "long-name file deletion failed");
+            require(!Arrays.asList(restarted.fileList()).contains(secondName),
+                    "deleted long-name claim was not reclaimed");
         } finally {
             deleteRecursively(root);
         }
@@ -202,13 +349,33 @@ public final class GuestStorageNameCodecSelfTest {
     }
 
     private static void requireLegacyCollision(ThrowingRunnable action) throws Exception {
+        requireFailure(GuestStorageNameCodec.LEGACY_COLLISION, action);
+    }
+
+    private static void requireFailure(String code, ThrowingRunnable action) throws Exception {
         try {
             action.run();
-            throw new AssertionError("expected " + GuestStorageNameCodec.LEGACY_COLLISION);
+            throw new AssertionError("expected " + code);
         } catch (IllegalStateException expected) {
-            require(String.valueOf(expected.getMessage()).contains(
-                            GuestStorageNameCodec.LEGACY_COLLISION),
-                    "unexpected legacy collision failure: " + expected.getMessage());
+            require(String.valueOf(expected.getMessage()).contains(code),
+                    "unexpected failure: " + expected.getMessage());
+        }
+    }
+
+    private static void await(CountDownLatch latch) {
+        try {
+            latch.await();
+        } catch (InterruptedException error) {
+            Thread.currentThread().interrupt();
+            throw new AssertionError(error);
+        }
+    }
+
+    private static void writeUnchecked(File file, String value) {
+        try {
+            write(file, value);
+        } catch (Exception error) {
+            throw new AssertionError(error);
         }
     }
 
